fixed spacing

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -110,7 +110,7 @@ hr{
   border-radius: 11px;
   text-transform: uppercase;
   // font-size: 20px;
-  top: 225px;
+  top: 245px;
   text-align: center;
   // width: 145px;
   box-shadow: 0 2px 11px rgba(0,0,0,0.2);
@@ -121,7 +121,7 @@ hr{
 }
 
 #about {
-  top: 140px;
+  top: 160px;
   position: fixed;
   z-index: 10;
   background-color: $accentcolor;
